doc/skin.css
.header
{
	background :#464646;
}

.header .tab-container .tab
{
	float : right;
	padding : 5px;
	color : #add8e6;
	font-weight : bold;
	font-size : 110%;
}

.layout
{
	min-width : 980px;
}

.header > .container,
.welcome > .container,
.body > .container,
.footer > .container
{
	margin  : 0 auto;
	width   : 958px;
	padding : 10px;
}

.welcome
{
	border-bottom : dotted 1px #90acc2;
	color : #4d4d4d;
	background : #E4F2FD;
}

	.welcome p
	{
		font-size : 115%;
	}

	.welcome .introduction
	{
		font-size : 130%;
	}

		.welcome .download_button
		{
			width : auto;
			border : solid 1px #7f7f7f;
			background : #e5e5e5;
			float : right;
			-moz-border-radius : 3px;
			border-radius : 3px;
		}
		
		.welcome .column > .container
		{
			padding : 10px;
		}

		.welcome .download_button .download_button_container
		{
			padding : 5px;
			border : solid 1px #FFFFFF;
			-moz-border-radius : 3px;
			border-radius : 3px;
		}

		.welcome .download_button a,
		.welcome .download_button a:visited
		{
			text-decoration : none;
			color : #4d4d4d;
			font-size : 120%;
		}
.footer
{
	background : #4D4D4D;
	color : #FFFFFF; 
}

